// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggles Config when application environment is live should contain correct default values 1`] = `
{
  "_environment": "live",
  "ads": {
    "enabled": false,
  },
  "chartbeatAnalytics": {
    "enabled": true,
  },
  "enableFetchingToggles": {
    "enabled": true,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|marathi|mundo|naidheachdan|nepali|news|pashto|persian|pidgin|polska|portuguese|punjabi|russian|scotland|serbian|sinhala|somali|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": false,
  },
  "include": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": true,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "radioSchedule": {
    "enabled": true,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;

exports[`Toggles Config when application environment is local should contain correct default values 1`] = `
{
  "_environment": "local",
  "ads": {
    "enabled": false,
  },
  "chartbeatAnalytics": {
    "enabled": true,
  },
  "comscoreAnalytics": {
    "enabled": true,
  },
  "electionBanner": {
    "enabled": true,
  },
  "enableFetchingToggles": {
    "enabled": true,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|marathi|mundo|naidheachdan|nepali|news|pashto|persian|pidgin|polska|portuguese|punjabi|russian|scotland|serbian|sinhala|somali|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": true,
  },
  "homePageRadioSchedule": {
    "enabled": true,
  },
  "include": {
    "enabled": true,
  },
  "liveRadioSchedule": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": true,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "onDemandRadioSchedule": {
    "enabled": true,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;

exports[`Toggles Config when application environment is test should contain correct default values 1`] = `
{
  "_environment": "test",
  "ads": {
    "enabled": false,
  },
  "chartbeatAnalytics": {
    "enabled": true,
  },
  "enableFetchingToggles": {
    "enabled": true,
    "value": "(afaanoromoo|afrique|amharic|arabic|archive|azeri|bengali|burmese|cymrufyw|gahuza|gujarati|hausa|hindi|igbo|indonesia|japanese|korean|kyrgyz|marathi|mundo|naidheachdan|nepali|news|pashto|persian|pidgin|polska|portuguese|punjabi|russian|scotland|serbian|sinhala|somali|swahili|tamil|telugu|thai|tigrinya|turkce|ukchina|ukrainian|urdu|uzbek|vietnamese|yoruba|zhongwen)",
  },
  "eventTracking": {
    "enabled": true,
  },
  "include": {
    "enabled": true,
  },
  "mostRead": {
    "enabled": true,
  },
  "nielsenAnalytics": {
    "enabled": true,
  },
  "preloadLeadImage": {
    "enabled": true,
  },
  "prerollAds": {
    "enabled": true,
  },
  "radioSchedule": {
    "enabled": true,
  },
  "scriptLink": {
    "enabled": true,
  },
  "variantCookie": {
    "enabled": true,
  },
  "webVitalsMonitoring": {
    "enabled": true,
  },
}
`;
